# django-remote-json

./: LICENSE  README.md  pyproject.toml  pytest.ini
src/django_remote_json/: __init__.py  remote_json_field.py  remote_json_proxy.py
tests/: apps.py  conftest.py  models.py  test_remote_json_field.py
