[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-remote-json"
version = "0.2.0"
description = "Django model field storing JSON remotely with transparent lazy proxy and dirty tracking"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name="Treyd", email="engineering@treyd.com" }
]
requires-python = ">=3.10"
dependencies = [
  "Django>=4.2",
]
classifiers = [
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/treyd-io/django-remote-json"
Repository = "https://github.com/treyd-io/django-remote-json"
Issues = "https://github.com/treyd-io/django-remote-json/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"django_remote_json" = ["py.typed"]
